scr/testsuite/tests/error.err
[Scanner] tests/error.scr:3 Syntax error: syntax error, unexpected $end, expecting ')' or ','
[Interpreter] :0 Not a term in scr file 'tests/error.scr'.
[Interpreter] tests/error.ycp:4 Couldn't mount agent to handle '.foo'
