scr/testsuite/tests/error.ycp
{
    RegisterAgent (.foo, "tests/error.scr");

    return (Read (.foo));
}
